<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Follow Lessons</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="bienvenido">Wellcome to Follow Lessons</string>
    <string name="btn">Pulsa</string>

    <!--Strings Bd-->
    <string name="selecciona_una_opcion">Selecciona Lesson:</string>
    <string name="crear">Crear BD y tabla</string>
    <string name="insertar">Insertar curso</string>
    <string name="borrar">Borrar curso</string>
    <string name="buscar">Buscar curso</string>
    <string name="titulo">Manager BD</string>
    <string name="editar">Editar curso</string>
    <string name="salir">Salir menu principal</string>

    <!--Strings onCode-->
    <string name="introduceB">Introduce búsqueda</string>
    <string name="editTextLugar" />
    <string name="btnBuscar">Buscar</string>
    <string name="btnCopiar">Copiar desde Contactos</string>

    <!--Strings mapas-->
    <string name="title_activity_contactos">Contactos</string>
    <string name="bLaGuardia">La Guardia, Rioja</string>
    <string name="bBilbaoMus">Bilbao, Museo</string>
    <string name="bZarautz">Zarautz,Costa</string>
    <string name="bGet">Getárea, Costa</string>
    <string name="bSanS">San Sebastián</string>

    <!--Strings Cards views-->
    <string name="tarjeta_1">Tarjeta</string>
    <string name="tarjeta_subt">ver</string>
    <string name="tarjeta_2">ver</string>
    <string name="title_activity_card_view">CardViewActivity</string>
    <string name="cardview_contents">This is a CardView widget. CardView widgets can have
        shadows and rounded corners.
        \n\nTo create a card with a shadow, use the <font fgcolor="#FFFFFFFF">android:elevation</font>
        attribute.
        \n\nTo set the corner radius in your layouts, use the <font
            fgcolor="#FFFFFFFF">card_view:cardCornerRadius</font> attribute.
    </string>
    <string name="cardview_radius_seekbar_text">Radius</string>
    <string name="cardview_elevation_seekbar_text">Elevation</string>


    <!-- Lista de titulos de navegacion del navDrawer-->
    <string-array name="nav_options">
        <item>Inicio</item>
        <item>Perfiles</item>
        <item>Lessons</item>
        <item>Gestión lessons</item>
        <item>onCode</item>
        <item>Eventos</item>
        <item>Blog Roll</item>
        <item>Configuración</item>
        <item>Salir</item>
    </string-array>

    <!--Declaro la Lista de iconos de navegacion
        Obtengo los iconos de la carpeta drawable-->
    <array name="navigation_iconos">
        <item>@drawable/ic_action_home</item>
        <item>@drawable/ic_action_user</item>
        <item>@drawable/ic_action_star</item>
        <item>@drawable/ic_action_bdc</item>
        <item>@drawable/ic_action_git</item>
        <item>@drawable/ic_action_event</item>
        <item>@drawable/ic_action_labels</item>
        <item>@drawable/ic_action_settings</item>
        <item>@drawable/ic_action_exit</item>
    </array>


    <string name="code">OnCode</string>
    <string name="loading">Cargando...</string>
    <string name="Lessons">Lessons</string>
    <string name="profile">Perfiles</string>
    <string name="bd">Gestión</string>
    <string name="cal">Eventos</string>
    <string name="lugar">Lugares</string>

    <string name="title_activity_bd_fragment">Gestión</string>
    <string name="title_activity_lugares_fragment">Lugares</string>
    <string name="lessons">Lessons</string>

    <!--Strings lessons-->
<!--Programación-->
    <string name="cpp">C++</string>
    <string name="qt">Qt</string>
    <string name="android">Java-Android</string>
    <string name="js">Javascript</string>
    <string name="php">PHP</string>
    <string name="jquery">JQuery</string>
    <string name="ajax">Ajax</string>
    <string name="json">JSON</string>

    <!--Bases de datos-->
    <string name="mysql">MySQL</string>sqlite
    <string name="sqlite">SQLite</string>
    <!--Web-->
    <string name="html">HTML5</string>
    <string name="css">Css3</string>
    <string name="dw">Dreaweaver</string>

 <!--Diseño-->
    <string name="photo">Photoshop</string>
    <string name="ilust">Illustrator</string>

   <!--Control de versiones-->
    <string name="git">Git</string>

    <!--Ejemplos-->
    <string name="ejemplos">
               Android RecyclerView\n
               Android Layouts\n
               Android Fragments

        </string>
    <string name="title_activity_activity_bd">ActivityBd</string>
    <string name="title_activity_gestion5_b">Gestion5BActivity</string>
</resources>

