<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MisLugares">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="42dp"
        android:layout_toRightOf="@+id/imageView"
        android:lines="2"
        android:text="Viaje La Rioja "
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/bLaGuardia"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/bLaGuardia" />

        <Button
            android:id="@+id/bBilbaoMus"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/bLaGuardia"
            android:layout_below="@+id/bLaGuardia"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:text="@string/bBilbaoMus" />

        <Button
            android:id="@+id/bZarautz"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/bBilbaoMus"
            android:layout_below="@+id/bBilbaoMus"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:text="@string/bZarautz" />

        <Button
            android:id="@+id/bGet"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/bZarautz"
            android:layout_below="@+id/bZarautz"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:text="@string/bGet" />

        <Button
            android:id="@+id/bSanS"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/bGet"
            android:layout_below="@+id/bGet"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:text="@string/bSanS" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/textView2"
        android:background="@drawable/bg_rioja_wine" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:text="   País Vasco"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>